--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,6 @@
-/*
-! tailwindcss v3.4.3 | MIT License | https://tailwindcss.com
-*/
+/* WARNING: TAILWIND STUFF DO NOT TOUCH */
+
+/* ! tailwindcss v3.4.3 | MIT License | https://tailwindcss.com */
 
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
@@ -654,6 +654,10 @@ ol,
   width: 100vw;
 }
 
+.table-fixed {
+  table-layout: fixed;
+}
+
 .border-separate {
   border-collapse: separate;
 }
@@ -813,12 +817,12 @@ ol,
   padding: 0px;
 }
 
-.p-3 {
-  padding: 0.75rem;
+.p-2 {
+  padding: 0.5rem;
 }
 
-.p-4 {
-  padding: 1rem;
+.p-3 {
+  padding: 0.75rem;
 }
 
 .px-2 {
@@ -858,6 +862,10 @@ ol,
 
 .pl-3 {
   padding-left: 0.75rem;
+}
+
+.pr-1 {
+  padding-right: 0.25rem;
 }
 
 .pr-2 {
@@ -934,12 +942,22 @@ ol,
   transition-duration: 300ms;
 }
 
-/* ! font in all pages */
+/* WARNING: TAILWIND STUFF DO NOT TOUCH */
+
+/* REVIEW: FONT IN ALL PAGES */
 
 html {
   font-family: 'M PLUS 1p', sans-serif !important;
   /* font-weight: bold; */
 }
+
+/* ! in main_canvas */
+
+.main_canvas {
+  min-height: calc(100vh - 46px) !important;
+}
+
+/* REVIEW: heading text h1 - h5 */
 
 h1 {
   font-size: 1.5rem;
@@ -965,14 +983,6 @@ h5 {
   font-size: 0.75rem;
   line-height: 1rem;
 }
-
-/* ! in main_canvas */
-
-.main_canvas {
-  min-height: calc(100vh - 46px) !important;
-}
-
-/* ! heading text h1 - h5 */
 
 h1,
 h2,
@@ -1001,13 +1011,15 @@ h6 {
   content: '#';
 }
 
-/*! list post in home.html  */
+/*REVIEW:  home.html  */
+
+/* LIST */
 
 .list-menu::before {
   content: '[+]';
 }
 
-/* ! baseof.html */
+/* REVIEW:  baseof.html */
 
 /* border code */
 
@@ -1016,7 +1028,7 @@ h6 {
   border-right: 1px solid rgba(156 163 175 / 0.5) !important;
 }
 
-/*! footer code in footer.html */
+/*REVIEW: footer.html */
 
 footer {
   position: absolute;
@@ -1028,13 +1040,23 @@ footer {
   padding: 0 1em;
 }
 
-/* ! post code in single.html */
+/*REVIEW: single.html */
+
+/* POST */
 
 .post {
   /* display: none; */
-  width: 100%;
-  padding: 0 1em 0 0;
+  width: 100vw;
+  /* padding: 0 1em 0 0; */
   overflow: hidden;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem
+}
+
+@media (min-width: 640px) {
+  .post {
+    width: 100%;
+  }
 }
 
 .post > p {
@@ -1057,7 +1079,7 @@ footer {
   width: 100%;
 }
 
-/* ! styleing for <code> */
+/* CODE */
 
 p > code {
   border-radius: 0.125rem;
@@ -1107,18 +1129,19 @@ pre {
   box-shadow: 20px 0px rgba(255, 255, 0, 0.5), 40px 0px rgb(0, 0, 255, 0.6);
 }
 
-/* INFO: SINGLE.html */
-
-/* styleing for table */
+/* TABLE */
 
 table {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
+  display: block;
+  width: 100%;
+  table-layout: fixed;
   border-collapse: separate;
   --tw-border-spacing-x: 0px;
   --tw-border-spacing-y: 0px;
   border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
-  overflow: hidden;
+  overflow: scroll;
   border-radius: 0.375rem;
   border-width: 1px;
   --tw-bg-opacity: 1;
@@ -1147,7 +1170,7 @@ table tr td {
   line-height: 1rem;
 }
 
-/* ! styleing for list */
+/* LIST */
 
 .post ol li {
   margin-left: 1.5rem;
@@ -1161,7 +1184,7 @@ table tr td {
   list-style-type: disc;
 }
 
-/* styleing for blockquote */
+/* BLOCKQUOTE */
 
 blockquote {
   margin-top: 0.5rem;
@@ -1218,6 +1241,10 @@ blockquote {
 @media (min-width: 640px) {
   .sm\:flex {
     display: flex;
+  }
+
+  .sm\:w-full {
+    width: 100%;
   }
 
   .sm\:grid-cols-\[150px_1fr\] {
